# utilsovs

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/utilsovs/: __init__.py  commons.py  compute.py  draw.py  globals.py  glygen.py  main.py  models.py  oglcnacDB.py  prepare.py  proteome.py  pubmed.py  semantic.py  uniprot.py
src/utilsovs_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
