[metadata]
name = utilsovs-pkg
version = 0.9.3
author = Florian Malard, PhD
author_email = florian.malard@gmail.com
description = Utils derived from the O-GlcNAc Database source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthaze/utilsovs
project_urls =
    Bug Tracker = https://github.com/synthaze/utilsovs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
